[package]
name = "yunpian-marketing-rest-mock"
version = "0.1.0"
authors = ["fox <fox@vvfox.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
rocket = "0.4.2"
serde = "1.0"
serde_json = "1.0"
serde_derive = "1.0"
rocket_contrib = "0.4"